address book spacing corrected;

--- a/src/Components/Components.css
+++ b/src/Components/Components.css
@@ -45,6 +45,7 @@
 }
 
 .addressBadges {
+  margin-top: -2px;
   color: #dba71a;
 }
 
